--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,14 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="robots" content="noindex, nofollow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- <link href='https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css' rel='stylesheet' /> -->
+	<link rel="stylesheet" href="./css/style.scss">
 	<title>Document</title>
 </head>
 
 <body>
-	yeah this will the the app
+	<div id='map'></div>
+	<script type="module" src="./js/main.js"></script>
 </body>
 
 </html>
