--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
 
 <head>
 	<meta charset="UTF-8">
@@ -8,12 +8,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- <link href='https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css' rel='stylesheet' /> -->
 	<link rel="stylesheet" href="./css/style.scss">
-	<title>Document</title>
+	<title>Bird Hotspot!</title>
 </head>
 
-<body>
-	<div id='map'></div>
-	<script type="module" src="./js/main.js"></script>
-</body>
+<body id="app" class="h-100"></body>
+<script type="module" src="./index.js"></script>
 
 </html>
