--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,8 @@
 	<meta name="robots" content="noindex, nofollow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/png" href="./favicon.png">
-	<!-- <link href='https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css' rel='stylesheet' /> -->
 	<link rel="stylesheet" href="./css/style.scss">
-	<title>Bird Hotspot!</title>
+	<title>Bird Hotspot</title>
 </head>
 
 <body id="app" class="h-100"></body>
