--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="robots" content="noindex, nofollow">
+	<meta name="robots" content="index, follow">
+	<meta name="description" content="This site answers the question: What birds 
+	have been seen at nearby hotspots in the past 7 days?">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
