--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,9 @@
 	<title>Bird Hotspot</title>
 </head>
 
-<body id="app" class="h-100"></body>
-<script type="module" src="./index.js"></script>
+<body class="h-100">
+	<div id="app" class="h-100"></div>
+	<script type="module" src="./index.js"></script>
+</body>
 
 </html>
