--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,11 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 	<link rel="icon" type="image/png" href="./favicon.png">
 	<link rel="stylesheet" href="./css/style.scss">
-	<title>Bird Hotspot</title>
+	<title>R: Bird Hotspot</title>
 </head>
 
 <body class="h-100">
-	<div id="app" class="h-100"></div>
+	<div id="app" class="d-flex flex-column h-100"></div>
 	<script type="module" src="./index.js"></script>
 </body>
 
