--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 	<link rel="icon" type="image/png" href="./favicon.png">
 	<link rel="stylesheet" href="./css/style.scss">
-	<title>R: Bird Hotspot</title>
+	<title>Bird Hotspot</title>
 </head>
 
 <body class="h-100">
