--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="robots" content="index, follow">
-	<meta name="description" content="This site answers the question: What birds 
-	have been seen at nearby hotspots in the past 7 days?">
+	<meta name="description" content="What birds have been seen at nearby hotspots in the past 7 days?">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +16,9 @@
 </head>
 
 <body class="h-100">
-	<div id="app" class="d-flex flex-column h-100"></div>
+	<div id="app" class="d-flex flex-column h-100" style="background-color:rgb(33,37,41);color:rgb(33,37,41)">
+		<h1>Bird Hotspots</h1>
+	</div>
 	<script type="module" src="./index.js"></script>
 </body>
 
